 - Adjust Terrorsite mapScripts for UFO spawn and proper block variety
 - Adjust Alien Alloy recovery from Missionsites to give proper yield
 - Add Terrorships Spawn on Terrorsites
 - Add DOWNTOWNURBAN Railstation to URBAN and INDUSTRIAL Terrosites
 - Add Ufopaedia Articles for Armors / Combat Analysis
 - Add Running will NOT trigger Mutual surprise

Version 0.99.9.5
 - Fix Game Crash due to Mission invocation
 - Fix UFO waterlanding possibilities
 - Fix Heavy Plasma Manufacture unlock error
 - Fix Wrong Deathsound for all Female Civilians
 - Fix Typos for Weaponlists
 - Fix Typos in extraSprites
 - Fix Position of Magadan City
 - Fix Missing BT_PSIAMP for Psi Panic and Mind Control Commendations
 - Fix Background for some Drone/AlloyDrones Sprites
 - Fix not working Cancel on Infiltration and Base building Alien Base
 - Adjust all Shotguns to behave like proper Ones
 - Add Fire Extinguisher Item
 - Add Armed Civilian to Terrorsites
 - Add Army Soldiers to Military Bases
 - Add TerrainHint DayNightIndicator
 - Add Stun, Burn and Bleeding Indicators for Battlescape
 - Add Avatars and TinyRanks for Battlescape
 - Add OXCE Armor Preview for Craft Equip Screen
 - Add OXCE Tank/Drone Preview for Craft Equip Screen
 - Add SoldierNames and SoldierCountryFlags
 - Add Inventory images for all Civilians
 - Add Inventory images for all Aliens
 - Add Inventory images for all Tanks
 - Add Ufopaedia images for all Tanks
 - Add Ufopaedia images for all Drones
 - Add Enhanced GUI Buttons and Backgrounds
 - Add Final Version of the Commendation sprite provided by cevaralien
 - Add higher salaries for officers (10% increase per rank compare to base salary)

Version 0.99.9.4
 - Fix Infiltration base prevention, if Battleship Attack successful
 - Fix Alloy Drone Taser Sprite Background
 - Fix Alloy Drone Scout Weapon Range
 - Fix Hovertank Smokeweapon Clipsize
 - Fix SellPrice for Alloy Cannon Craftweapon
 - Fix BuyPrice Drone Scout